5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1675_2472.log
== TEST (2019-05-11 17:58:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n1 = input("questao 1: ").lower()
n2 = input("questao 2: ").lower()
n3 = input("questao 3: ").lower() 
g1 = input("resposta 1: ").lower()
g2 = input("resposta 1: ").lower()
g3 = input("resposta 1: ").lower() 
if n1 == g1:
	a = 1
else:
	a = 0
if n2 == g2:
	b == 1
else:
	b == 0
if n3 == g3:
	c == 1
else:
	c == 0
print(a+b+c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    b == 0
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 17:58:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n1 = input("questao 1: ").lower()
n2 = input("questao 2: ").lower()
n3 = input("questao 3: ").lower() 
g1 = input("resposta 1: ").lower()
g2 = input("resposta 1: ").lower()
g3 = input("resposta 1: ").lower() 
if n1 == g1:
	a = 1
else:
	a = 0
if n2 == g2:
	b = 1
else:
	b = 0
if n3 == g3:
	c = 1
else:
	c = 0
print(a+b+c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    b == 0
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 17:59:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
n1 = input("questao 1: ").lower()
n2 = input("questao 2: ").lower()
n3 = input("questao 3: ").lower() 
g1 = input("resposta 1: ").lower()
g2 = input("resposta 1: ").lower()
g3 = input("resposta 1: ").lower() 
if n1 == g1:
	a = 1
else:
	a = 0
if n2 == g2:
	b = 1
else:
	b = 0
if n3 == g3:
	c = 1
else:
	c = 0
print(a+b+c)
-- EXECUTION TIME:
0.133751
-- TEST CASE 1:
---- input:
a
b
c
d
e
a
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
a
b
c
a
b
c
---- correct output:
3
---- user output:
3
-- TEST CASE 3:
---- input:
c
d
e
c
d
c
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
